<resources>
    <string name="app_name">PrimeraAppAndroid</string>
    <string name="menu_mas_opciones">Más opciones</string>
    <string name="mainTextViewTitulo">Programación Multimedia y Dispositivos Móviles</string>
    <string name="mainImageViewCIFPVdG">CIFPVdG</string>
    <string name="menu_notas">Crear nota</string>
    <string name="menu_contactos">Agregar contacto</string>
    <string name="menu_correos">Enviar correo</string>
    <string name="menu_eventos_calendario">Crear evento</string>
    <string name="menu_acerca_de">Acerca de</string>
    <string name="acerca_de_fotoDesarrollador">FotoDes</string>
    <string name="about_DevName">Iván Coello Cortés</string>
    <string name="contactos_btnAgregar">Agregar</string>
    <string name="contactos_txtNombre">Nombre</string>
    <string name="contactos_txtCorreo">Correo</string>
    <string name="CorreolblDestinarario">Destinatario</string>
    <string name="correo_lblAsunto">Asunto</string>
    <string name="correo_lblMensaje">Mensaje</string>
    <string name="correo_btnEnviar">Enviar</string>
    <string name="crearEvento_lblNombreEvento">Nombre del Evento</string>
    <string name="crearEvento_lblLocalizacion">Localizacion</string>
    <string name="crearEvento_btnCrear">Crear</string>
</resources>