<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CrearContactoActivity">

    <Button
            android:text="@string/contactos_btnAgregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/contactos_agregar"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="489dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="160dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="66dp" android:layout_marginEnd="163dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintVertical_bias="0.89"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/contactos_txtNombre"
            android:ems="10"
            android:id="@+id/contactos_txtNombre"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="170dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="97dp" android:layout_marginBottom="274dp"
            app:layout_constraintBottom_toTopOf="@+id/contactos_agregar" android:layout_marginEnd="101dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/contactos_txtCorreo"
            android:ems="10"
            android:id="@+id/contactosCorreo"
            android:layout_marginBottom="162dp"
            app:layout_constraintBottom_toTopOf="@+id/contactos_agregar" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="98dp" android:layout_marginEnd="100dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="67dp"
            app:layout_constraintTop_toBottomOf="@+id/contactos_txtNombre"
            app:layout_constraintHorizontal_bias="0.496" app:layout_constraintVertical_bias="0.262"/>
</androidx.constraintlayout.widget.ConstraintLayout>