<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EnviarCorreoActivity">

    <TextView
            android:text="@string/CorreolblDestinarario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/correo_lblDestinatario"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="176dp" android:layout_marginEnd="176dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="534dp" app:layout_constraintVertical_bias="0.083"/>
    <TextView
            android:text="@string/correo_lblAsunto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/correo_lblAsunto"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="177dp"
            android:layout_marginEnd="175dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496" android:layout_marginTop="19dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/correo_txtAsunto"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="103dp"
            android:layout_marginEnd="95dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="3dp" app:layout_constraintTop_toBottomOf="@+id/correo_lblAsunto"/>
    <TextView
            android:text="@string/correo_lblMensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/correo_lblMensaje"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/correo_txtAsunto" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="178dp" android:layout_marginEnd="174dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="174dp"
            android:layout_height="78dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/correo_txtMensaje"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/correo_lblMensaje" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="108dp" android:layout_marginEnd="93dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.555"/>
    <Button
            android:text="@string/correo_btnEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/correo_btnEnviar"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="268dp"
            android:layout_marginEnd="160dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="23dp" app:layout_constraintVertical_bias="0.731"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="163dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextTextEmailAddress"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/correo_lblDestinatario"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="101dp"
            android:layout_marginEnd="97dp" app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>