<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CrearEvento">

    <TextView
            android:text="@string/crearEvento_lblNombreEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/crearEvento_lblNombreEvento"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="176dp" android:layout_marginEnd="176dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/crearEvento_txtNombreEvento"
            android:layout_marginTop="21dp"
            app:layout_constraintTop_toBottomOf="@+id/crearEvento_lblNombreEvento"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="99dp"
            android:layout_marginEnd="99dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/crearEvento_lblLocalizacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/crearEvento_txtLocalizacion"
            android:layout_marginTop="19dp"
            app:layout_constraintTop_toBottomOf="@+id/crearEvento_txtNombreEvento"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="179dp"
            android:layout_marginEnd="173dp" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextTextPersonName3"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/crearEvento_txtLocalizacion"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="99dp"
            android:layout_marginEnd="99dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/crearEvento_btnCrear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/crearEvento_btnCrearEvento"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="163dp"
            android:layout_marginEnd="160dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"/>
</androidx.constraintlayout.widget.ConstraintLayout>